Set z-index on fixed headers

--- a/client/styles/sass/modules/_mobile-menu.scss
+++ b/client/styles/sass/modules/_mobile-menu.scss
@@ -8,6 +8,7 @@
   line-height: $height-header;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
   .mobile-menu-item {
