--- a/client/styles/sass/modules/header-primary/_index.scss
+++ b/client/styles/sass/modules/header-primary/_index.scss
@@ -7,6 +7,7 @@
   height: $height-header;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
   .header-primary-divider {
